--- a/mw-StageOne/restaurant.html
+++ b/mw-StageOne/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,7 +49,7 @@
       <label id="restaurant-address-label" class="restaurant-info-label">address</label>
       <!-- Beginning map -->
       <section id="map-container" aria-labelledby="map-aria-description" role="application">
-        <div id="map"></div>
+        <div id="map" role="application"></div>
       </section>
       <label id="map-aria-description" class="map-aria-description">Leaflet Map Application</label>
       <!-- End map -->
