--- a/mw-StageOne/index.html
+++ b/mw-StageOne/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
 
   <main id="maincontent">
     <section id="map-container" aria-labelledby="map-aria-description" role="application">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
     <label id="map-aria-description" class="map-aria-description">Leaflet Map Application</label>
     <section>
